--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
@@ -20,9 +18,9 @@
         <img src="./images/image-qr-code.png" alt="Qr-code" />
       </div>
       <div class="card-footer">
-        <p class="card-footer-title">
+        <h1 class="card-footer-title">
           Improve your front-end skills by building projects
-        </p>
+        </h1>
         <p class="card-footer-subtile">
           Scan the QR code to visit Frontend Mentor and take your coding skills
           to the next level
